# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml
gendiff/: diff.py  parsing.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result.yml
